# the-nature-of-computing

./: CMakeLists.txt  README.md
.github/workflows/: build-and-test.yml
chapter3/: CMakeLists.txt  dfa.cpp  dfa.hpp  dfa2graphviz.hpp  fa.md  fa_common.hpp  fa_link.hpp  nfa.cpp  nfa.hpp  nfa2dfa.hpp  nfa2graphviz.hpp  nfa_alternation.hpp  nfa_concatenate.hpp  nfa_repeat.hpp  readme.md  regex_generate.hpp  test_dfa.cpp  test_nfa.cpp  test_nfa2dfa.cpp  test_nfa2graphviz.cpp  test_nfa_alternation.cpp  test_nfa_concatenate.cpp  test_nfa_link.cpp  test_nfa_repeat.cpp  test_regex_generate.cpp
